@@ -4,6 +4,8 @@
 
 2013-04-16  6.8.5-5 Glenn Randers-Pehrson <glennrp@image...>
   * Eliminate whitespace from image properties that hold PNG chunk data.
+  * The -poly option treats the opacity channel as alpha (reference
+    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=23346).
 
 2013-05-05  6.8.5-5 Cristy  <quetzlzacatenango@image...>
   * Fix transient bug in the -separate option (reference
